# lerobot-data-annotator

./: .gitignore  README.md  pyproject.toml
annotator/: models.py  prompts.py  structured.py
annotator/models/: base.py  gemini.py
annotator/providers/: gemini.py  qwen.py
annotator/utils/: processors.py  tracker.py  visualization.py
docs/: qwen_usage.md
scripts/: download_dataset.py  generate_annotations.py  generate_visualizations.py  parse_dataset.py  process_annotations.py  run_processors_annotations.py  upload_dataset.py
test/: print_parquet.py  test_gemini_single_video.py
test/qwen/: inference.py
utils/: download_dataset.py  parse_dataset.py
utils/qwen/: download_model.py
